--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Portfolio of a web engineer, Mai TAKAMURA's work" />
         <meta property="og:type" content="website">
         <meta property="og:title" content="Portfolio of Mai TAKAMURA's work">
-        <meta property="og:url" content="URL">
+        <meta property="og:url" content="https://mei-sui.github.io">
         <meta property="og:description" content="Portfolio of a web engineer, Mai TAKAMURA's work">
         <meta property="og:image" content="img/ogp.png">
         <title>Portfolio of Mai TAKAMURA's work</title>
@@ -15,8 +15,8 @@
         <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
         <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
 
-        <link rel="shortcut icon" href="img/favicon.ico" />
-        <link rel="canonical" href="URL" />
+        <!-- <link rel="shortcut icon" href="img/favicon.ico" /> -->
+        <link rel="canonical" href="https://mei-sui.github.io" />
     </head>
 
     <body>
@@ -227,7 +227,8 @@
                         お問い合わせ・ご依頼は、<br class="sp-only">メールにてお願いいたします。
                     </p>
                     <div class="contact-list">
-                        meisui.takamura@gmail.com
+                        meisui.takamura(at)gmail.com<br>
+                        ※(at)は@へご変換ください。
                     </div>
                 </div>
             </section>
