--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
                     </p>
                 </div>
-                <div class="split-img"></div>
+                <div class="split-img">
+                    <span class="copyright">Illustration by <a target="_blank" href="https://www.instagram.com/shinsuke0330/?hl=ja">Shinsuke Takahashi</a></span>
+                </div>
             </div>
             <!-- split end -->
  
